@@ -5,6 +5,9 @@ $PAGE_SIZE = 25;
 print_header();
 
 echo "<h3>" . translate("Activity Log") . "</h3>\n";
+
+echo "<a title=\"" . translate("Admin") . "\" class=\"navlinks\" href=\"adminhome.php\">&laquo;&nbsp;" . translate("Admin") . "</a><br /><br />\n";
+
 echo "<table>\n";
 echo "<tr>";
 echo "<th>" .
