@@ -33,7 +33,7 @@ print_header();
 if ( $updating_public )
   echo translate($PUBLIC_ACCESS_FULLNAME) . " ";
 etranslate("Layers")?>&nbsp;<img src="help.gif" alt="<?php etranslate("Help")?>" onclick="window.open ( 'help_layers.php', 'cal_help', 'dependent,menubar,scrollbars,height=400,width=400,innerHeight=420,outerWidth=420');" /></h2>
-
+<a title="<?php etranslate("Admin") ?>" class="navlinks" href="adminhome.php">&laquo;&nbsp;<?php etranslate("Admin") ?></a><br /><br />
 <?php
 
 if ( $is_admin ) {
