@@ -20,6 +20,7 @@ $add = getValue ( "add" );
 ?>
 
 <h2><?php etranslate("NonUser")?></h2>
+<a title="<?php etranslate("Admin") ?>" class="navlinks" href="adminhome.php">&laquo;&nbsp;<?php etranslate("Admin") ?></a><br /><br />
 
 <?php
 // Adding/Editing nonuser calendar
