@@ -8,7 +8,7 @@ print_header();
 ?>
 
 <h2><?php etranslate("Views")?></h2>
-
+<a title="<?php etranslate("Admin") ?>" class="navlinks" href="adminhome.php">&laquo;&nbsp;<?php etranslate("Admin") ?></a><br /><br />
 <ul>
 <?php
 for ( $i = 0; $i < count ( $views ); $i++ ) {
