@@ -1,4 +1,5 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Added "Admin" links to return user to adminhome.php from admin pages
   - Improved iCal import handling of folded lines (data that spreads
     over more than one line of text)
   - Reapplied patch 1044285: today & weekend classes got reversed
